--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Press W to move up/ or start the ship
+		    Press W to move up/ or start the ship<br>
 			
-			Press A to move left 
+			Press A to move lef<br>
 			
-			Press S to move down
+			Press S to move down<br>
 			
-			Press D move right 
+			Press D move right<br>
 			
-			Press shift to "hyperspace"
+			Press shift to "hyperspace"<br>
 			
-			Press Q to completely stop
+			Press Q to completely stop<br>
 	    </footer>
 	</body>
 </html>
