--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Press W to move up/ or start the ship<br>
+		    Press W to move up/ or start the ship<p>
 			
-			Press A to move lef<br>
+			Press A to move lef<p>
 			
-			Press S to move down<br>
+			Press S to move down<p>
 			
-			Press D move right<br>
+			Press D move right<p>
 			
-			Press shift to "hyperspace"<br>
+			Press shift to "hyperspace"<p>
 			
-			Press Q to completely stop<br>
+			Press Q to completely stop<p>
 	    </footer>
 	</body>
 </html>
