--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			
 			Press D move right<p>
 			
-			Press shift to "hyperspace"<p>
+			Press shift to hyperspace to random place <p>
 			
 			Press Q to completely stop<p>
 	    </footer>
