--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Press W to move up/ or start the ship<p>
+		    Press W to move up<p>
 			
 			Press A to move lef<p>
 			
