--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Have fun</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde Bullet.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde Bullet.pde Explosion.pde Particle.pde">
 				</canvas>
 		    </section>
 	    <footer>
@@ -22,8 +22,10 @@
 			Press S to move down<p>
 			
 			Press D move right<p>
+
+			Press Space to shoot<p>
 			
-			Press shift to hyperspace to random place <p>
+			Press shift to hyperspace<p>
 			
 			Press Q to completely stop<p>
 	    </footer>
